--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 Fix:
 
-Title image
-Update functionality and page layout
+-Title image
+-Update movies/users/lists functionality and page layout
+-Change admin page to show number of users, movies and lists instead of sales info
+
